discussion/kv_engine/187503/187503_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-55391: Don't leave Cursors in CheckpointManager if not moved to ActiveStream

In ActiveStream::scheduleBackfill_UNLOCKED an exception was thrown
before the result of registerCursor was assigned to
ActiveStream::cursor. This resulted in the cursor being orphaned - it
existed in CheckpointManager but was not associated with any Stream,
and hence was not advanced (via getItemsForCursor) - but also was not
subject to cursor-dropping so resulted in the CheckpointManager
getting stuck at the checkpoint high watermark.

Address this problem (and similar issues) by having CursorRegResult
own the Cursor object, until the user takes ownership of it (via new
takeCursor() method). If CursorRegResult is destroyed and still owns
the cursor; then remove it from CheckpointManager.

Note: An alternate approach would be to implement the "auto remove"
      logic to CheckpointCursor itself (in its dtor); then say have
      CheckpointManager only hold a weak_ptr to CheckpointCursor
      (currently holds a shared_ptr). That would solve the problem at
      a higher level and for all uses of Cursor / CheckpointCursor,
      even after cursor has been moved from CursorRegResult. For
      example right now we rely on ActiveStream's dtor "remembering"
      to remove the cursor from CheckpointManager.

      While such an approach certainly has merit, I feel it's more
      invasive as we would be changing the ownership model of
      CheckpointManager / CheckpointCursor, so at this stage in Elixir
      development, the current approach - while less "complete" is
      smaller in scope and at lower risk of introducing any
      regressions.

Change-Id: If292d10d03cbddeb34cd567e7ce5110a5d58db70

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2023-03-08 13:30:38.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-08 13:44:03.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22882/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1637:33: error: "cursor" is a private member of "CursorRegResult" [clang-diagnostic-error]
        const auto cursor = res.cursor.lock();
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:108:12: note: declared private here
    Cursor cursor;
           ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22882/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1637:33:
error: "cursor" is a private member of "CursorRegResult" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22882/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52334/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\checkpoint_test.cc(1637): error C2248: "CursorRegResult::cursor": cannot access private member declared in class "CursorRegResult" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52334/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12614/ : FAILURE

Compile error at [2023-03-08T13:33:34.624Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1637:33:
error: "cursor" is a private member of "CursorRegResult"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12614/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1683/ : FAILURE

Compile error at [2023-03-08T13:33:23.460Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1637:33:
error: ?Cursor CursorRegResult::cursor? is private within this context
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1683/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12694/ : FAILURE

Compile error at [2023-03-08T13:37:41.615Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1637:33:
error: ?Cursor CursorRegResult::cursor? is private within this context
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12694/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24945/ : FAILURE

Compile error at [2023-03-08T13:33:48.291Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1637:33:
error: ?Cursor CursorRegResult::cursor? is private within this context
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24945/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25403/ : FAILURE

Compile error at [2023-03-08T13:36:31.595Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1637:33:
error: ?Cursor CursorRegResult::cursor? is private within this context
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25403/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26256/ : FAILURE

Compile error at [2023-03-08T13:34:38.813Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1637:33:
error: "cursor" is a private member of "CursorRegResult"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26256/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24518/ : FAILURE

Compile error at [2023-03-08T13:36:58.767Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1637:33:
error: "cursor" is a private member of "CursorRegResult"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24518/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33361/ : FAILURE

Compile error at [2023-03-08T13:35:29.007Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1637:33:
error: "cursor" is a private member of "CursorRegResult"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33361/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43898/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23117/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
